# pandora.cc

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  all.cmake
examples/hello-world/: CMakeLists.txt
examples/hello-world/src/services/: addition.cpp  addition.hpp  multiplication.cpp  multiplication.hpp
experiments/: future.cpp  mpsc-queue-main.cpp  mpscq-benchmark.cpp  mpscq-throttled-benchmark.cpp  own-future-benchmark.cpp
experiments/benchmarks/: future-benchmark.cpp  lambdas-create.cpp  mpscq-benchmark.cpp  own-future-benchmark.cpp
experiments/mpsc-queue/: mpsc-queue.hpp  mpsq-queue.hpp  test.cpp
experiments/network/: echo-client.cpp  echo-server.cpp
include/pandora/: bundle.hpp  core.hpp  services.hpp
include/pandora/primitives/: future.hpp  mpsc-queue.hpp
include/pandora/services/: loadService.hpp  ls.hpp  networkHandler.hpp
src/: bundle.cpp  core.cpp  impl.cpp  services.cpp
src/services/: loadService.cpp  ls.cpp  networkHandler.cpp
thesis/: future_benchmark.data  generate  main.aux  main.bbl  main.blg  main.lof  main.tex  main.toc  mpscq_throttled_benchmark.data  own_future_benchmark.data  pandora_benchmark.data  producer_max_end.data  real_time.data  words
thesis/content/: abstract.tex  abstract_ro.tex  bibliography.bib  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  conclusion.tex  title.tex
thesis/content/fig/: addition-service.txt  all-plot-data.tex  basefuture.txt  callbacks.txt  future.data.tex  future.tex  mpscq.data.tex  mpscq.tex
